JS - addEventListener scroll btn & header - CSS - section fix overflow

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 section::before {
